@startuml

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide empty members

Package "western" {
class Boisson
{
- substantif : Substantif {readOnly}
+ EAU : Boisson {static} {readOnly}
+ <<create>> Boisson(nom : String, genre : Genre) 
+ getNom() : String
+ getGenre() : Genre
+ getNomAvecArticleIndefini() : String
+ getNomAvecArticlePartitif() : String
+ getNomAvecArticleDefini() : String
+ getNomAvecPreposition(preposition : String) : String
}

class Brigand
{
~ LOOK_PAR_DEFAUT : String {static}
- look : String
- recompense : Integer
- estLibre : Boolean
- gardien : Cowboy
- boissonParDefaut : Boisson {static}
+ <<create>> Brigand(nom : String) 
+ <<create>> Brigand(nom : String, boisson : Boisson) 
+ <<create>> Brigand(nom : String, boisson : Boisson, look : String) 
+ getLook() : String
+ getRecompense()  : Integer
+ estLibre()  : Boolean
+ kidnapper(dame : Dame) 
+ seFaireCapturer(cowBoy : Cowboy) 
+ seFaireTirerDessus(cowBoy : Cowboy) 
+ getPseudo() : String
+ getCaptives() : List
+ sePresenter() 
+ {static} getBoissonParDefaut() : Boisson
+ {static} setBoissonParDefaut(boisson : Boisson) 
}

class Cowboy
{
- gains : Integer
- boissonParDefaut : Boisson {static}
+ <<create>> Cowboy(nom : String) 
+ <<create>> Cowboy(nom : String, boisson : Boisson) 
+ getPseudo() : String
+ liberer(dame : Dame) 
+ liberer(captives : List) 
+ capturer(horsLaLoi : HorsLaLoi) 
+ tirerSur(brigand : HorsLaLoi) 
+ sePresenter() 
+ {static} getBoissonParDefaut() : Boisson
+ {static} setBoissonParDefaut(boisson : Boisson) 
}

class Dame
{
- estLibre : Boolean
- sauveur : Cowboy
- ravisseur : HorsLaLoi
- boissonParDefaut : Boisson {static}
+ <<create>> Dame(nom : String) 
+ <<create>> Dame(nom : String, boisson : Boisson) 
+ getPseudo() : String
+ seFaireKidnapper(horsLaLoi : HorsLaLoi) 
+ seFaireLiberer(cowBoy : Cowboy) 
+ estLibre()  : Boolean
+ sePresenter() 
+ {static} getBoissonParDefaut() : Boisson
+ {static} setBoissonParDefaut(boisson : Boisson) 
+ getRavisseur() : HorsLaLoi
}

class Histoire4
{
+ <<create>> Histoire4() 
+ {static} main(args : String[]) 
}

class Narrateur
{
+ <<create>> Narrateur() 
+ <<create>> Narrateur(nom : String) 
+ dire(texte : String) 
+ boire(boisson : Boisson) 
+ boire() 
+ getPseudo() : String
}

class Personnage
{
- BOISSON_PAR_DEFAUT : Boisson {static}
- nom : String
- boisson : Boisson
+ <<create>> Personnage(nom : String) 
+ <<create>> Personnage(nom : String, boisson : Boisson) 
+ dire(texte : String) 
+ sePresenter() 
+ boire(boisson : Boisson) 
+ boire() 
+ getNom() : String
+ getBoisson() : Boisson
+ {static} getPseudos(personnages : List) : String
+ {static} getBoissonParDefaut() : Boisson
}

class Ripou
{
- brigand : Brigand
+ <<create>> Ripou(nom : String) 
+ <<create>> Ripou(nom : String, boisson : Boisson) 
+ <<create>> Ripou(nom : String, boisson : Boisson, look : String) 
+ getLook() : String
+ estLibre()  : Boolean
+ getRecompense()  : Integer
+ kidnapper(dame : Dame) 
+ getCaptives() : List
+ seFaireCapturer(cowBoy : Cowboy) 
+ seFaireTirerDessus(cowBoy : Cowboy) 
+ getPseudo() : String
+ sePresenter() 
+ liberer(dame : Dame) 
}

class Substantif
{
- nom : String
- genre : Genre
+ <<create>> Substantif(nom : String, genre : Genre) 
+ getNom() : String
+ getGenre() : Genre
+ toString() : String
+ {static} isVowel(c : char)  : Boolean
+ {static} startsWithVowel(s : String)  : Boolean
+ getArticleIndefini() : String
+ avecArticleIndefini() : String
+ {static} getArticleDefini(genre : Genre) : String
+ getArticleDefini() : String
+ avecArticleDefini() : String
+ {static} faireElision(article : String) : String
+ elision()  : Boolean
+ getArticlePartitif() : String
+ avecArticlePartitif() : String
+ avecElision(article : String) : String
+ avecPreposition(preposition : String) : String
}

class "<<interface>>\n HorsLaLoi" as HorsLaLoi
{
+ {abstract} estLibre()  : Boolean
+ {abstract} getRecompense()  : Integer
+ {abstract} kidnapper(dame : Dame) 
+ {abstract} seFaireCapturer(cowBoy : Cowboy) 
+ {abstract} seFaireTirerDessus(cowBoy : Cowboy) 
+ {abstract} getLook() : String
+ {abstract} getCaptives() : List

}

class "<<interface>>\n Nommable" as Nommable
{
+ {abstract} getNom() : String
+ {abstract} getPseudo() : String

}

class "<<enumeration>>\n Genre" as Genre
{
FEMININ
MASCULIN
}


Brigand --|> Personnage
Brigand ..|> HorsLaLoi
Brigand " * \n captives " o--> Dame
Brigand ..> Dame : <<use>> 
Brigand ..> Cowboy : <<use>> 
Brigand ..> Boisson : <<use>> 

Cowboy --|> Personnage
Cowboy " * \n captures " o--> HorsLaLoi
Cowboy ..> Dame : <<use>> 
Cowboy ..> HorsLaLoi : <<use>> 
Cowboy ..> Boisson : <<use>> 

Dame --|> Personnage
Dame ..> HorsLaLoi : <<use>> 
Dame ..> Cowboy : <<use>> 
Dame ..> Boisson : <<use>> 


Narrateur --|> Personnage
Narrateur ..> Boisson : <<use>> 

Personnage ..|> Nommable
Personnage ..> Boisson : <<use>> 

Ripou --|> Cowboy
Ripou ..|> HorsLaLoi
Ripou ..> Dame : <<use>> 
Ripou ..> Cowboy : <<use>> 

Substantif ..> Genre : <<use>> 

}

@enduml

